--- a/.gitignore
+++ b/.gitignore
@@ -146,6 +146,9 @@ _ReSharper*/
 # TeamCity is a build add-in
 _TeamCity*
 
+#Coverlet result files
+coverage.*.xml
+
 # DotCover is a Code Coverage Tool
 *.dotCover
 
