--- a/src/Catalyst.Node.Core/Properties/launchSettings.json
+++ b/src/Catalyst.Node.Core/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "Catalyst.Node.Core": {
-      "commandName": "Project",
-      "commandLineArgs": "--peer-public-key abcdefghijklmnopqrst --disable-wallet --disable-dfs --disable-ledger -d"
+      "commandName": "Project"
     }
   }
 }
