--- a/src/Catalyst.Node.Core/Catalyst.Node.Core.csproj
+++ b/src/Catalyst.Node.Core/Catalyst.Node.Core.csproj
@@ -23,7 +23,7 @@
     <PackageReference Include="Ipfs.Engine" Version="0.3.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.2.0" />
-    <PackageReference Include="Networker.Formatter.ProtobufNet" Version="3.0.9-rc" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
     <PackageReference Include="Serilog" Version="2.8.0" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.2" />
     <PackageReference Include="Serilog.Enrichers.Environment" Version="2.1.3" />
