--- a/src/Catalyst.Node.Core/Config/components.json
+++ b/src/Catalyst.Node.Core/Config/components.json
@@ -10,6 +10,22 @@
       ]
     },
     {
+      "type": "Catalyst.Node.Core.RPC.RpcServer",
+      "services": [
+        {
+          "type": "Catalyst.Node.Common.Interfaces.IRpcServer, Catalyst.Node.Common"
+        }
+      ]
+    },
+    {
+      "type": "Catalyst.Node.Core.RPC.RpcServerSettings",
+      "services": [
+        {
+          "type": "Catalyst.Node.Common.Interfaces.IRpcServerSettings, Catalyst.Node.Common"
+        }
+      ]
+    },
+    {
       "type": "Catalyst.Node.Core.P2P.PeerSettings",
       "services": [
         {
@@ -163,5 +179,5 @@
         "configFilePath": "Config/Modules/mempool.json"
       }
     }
-  ] 
+  ]
 }
