resolve MockDns for local development, to pass sticking tests without dns-docker-compose running

--- a/src/Catalyst.Node.Core/Config/components.json
+++ b/src/Catalyst.Node.Core/Config/components.json
@@ -90,7 +90,7 @@
       ]
     },
     {
-      "type": "Catalyst.Node.Common.Helpers.Network.Dns, Catalyst.Node.Common",
+      "type": "Catalyst.Node.Common.UnitTests.TestUtils.MockDns, Catalyst.Node.Common.UnitTests",
       "services": [
         {
           "type": "Catalyst.Node.Common.Interfaces.IDns, Catalyst.Node.Common"
