add the protocol files direcly in the solution and compile on the fly

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "submodules/cs-multibase"]
 	path = submodules/cs-multibase
 	url = https://github.com/atlascity/cs-multibase.git
+[submodule "submodules/protocol-protobuffs"]
+	path = submodules/protocol-protobuffs
+	url = https://github.com/catalyst-network/protocol-protobuffs.git
