--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -3,6 +3,6 @@ root = true
 [*]
 indent_style = space
 indent_size = 4
-trim_trailing_whitespace = true
+trim_trailing_whitespace = false
 insert_final_newline = true
 charset = utf-8
