header file fix = don't check for underflow / overflow TODO: https://github.com/catalyst-network/Catalyst.Node/issues/306

--- a/src/Catalyst.Cli/Catalyst.Cli.csproj
+++ b/src/Catalyst.Cli/Catalyst.Cli.csproj
@@ -1,4 +1,4 @@
-﻿<Project>
+<Project>
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <Title>Catalyst CLI</Title>
@@ -6,14 +6,6 @@
     <PackageDescription>CLI tool to interact with Catalyst Nodes via RPC</PackageDescription>
     <AssemblyCopyrightAttribute>Copyright © 2019 AtlasCity.io</AssemblyCopyrightAttribute>
     <OutputType>Exe</OutputType>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <OutputPath>bin\Debug\</OutputPath>
-    <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <OutputPath>bin\Release\</OutputPath>
-    <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
   </PropertyGroup>
   <Import Project="../Common.Projects.props" />
   <ItemGroup>
