--- a/src/Catalyst.Node.Core/Config/components.json
+++ b/src/Catalyst.Node.Core/Config/components.json
@@ -13,7 +13,7 @@
             "type": "Catalyst.Node.Core.RPC.RpcServer",
             "services": [
                 {
-                    "type": "Catalyst.Node.Common.Interfaces.IRpcServer, Catalyst.Node.Common"
+                    "type": "Catalyst.Node.Common.Interfaces.Rpc.IRpcServer, Catalyst.Node.Common"
                 }
             ]
         },
@@ -21,7 +21,7 @@
             "type": "Catalyst.Node.Core.RPC.RpcServerSettings",
             "services": [
                 {
-                    "type": "Catalyst.Node.Common.Interfaces.IRpcServerSettings, Catalyst.Node.Common"
+                    "type": "Catalyst.Node.Common.Interfaces.Rpc.IRpcServerSettings, Catalyst.Node.Common"
                 }
             ]
         },
@@ -29,7 +29,7 @@
             "type": "Catalyst.Node.Core.P2P.PeerSettings",
             "services": [
                 {
-                    "type": "Catalyst.Node.Common.Interfaces.IPeerSettings, Catalyst.Node.Common"
+                    "type": "Catalyst.Node.Common.Interfaces.P2P.IPeerSettings, Catalyst.Node.Common"
                 }
             ]
         },
@@ -85,7 +85,7 @@
             "type": "Catalyst.Node.Common.Peer, Catalyst.Node.Common",
             "services": [
                 {
-                    "type": "Catalyst.Node.Common.Interfaces.IPeer, Catalyst.Node.Common"
+                    "type": "Catalyst.Node.Common.Interfaces.P2P.IPeer, Catalyst.Node.Common"
                 }
             ]
         },
@@ -93,7 +93,7 @@
             "type": "Catalyst.Node.Core.P2P.PeerDiscovery",
             "services": [
                 {
-                    "type": "Catalyst.Node.Common.Interfaces.IPeerDiscovery, Catalyst.Node.Common"
+                    "type": "Catalyst.Node.Common.Interfaces.P2P.IPeerDiscovery, Catalyst.Node.Common"
                 }
             ]
         },
@@ -117,7 +117,7 @@
             "type": "Catalyst.Node.Core.P2P.P2PService",
             "services": [
                 {
-                    "type": "Catalyst.Node.Common.Interfaces.IP2P, Catalyst.Node.Common"
+                    "type": "Catalyst.Node.Common.Interfaces.P2P.IP2PService, Catalyst.Node.Common"
                 }
             ]
         },
