--- a/src/Catalyst.Node.Core/Config/components.json
+++ b/src/Catalyst.Node.Core/Config/components.json
@@ -10,10 +10,10 @@
             ]
         },
         {
-            "type": "Catalyst.Node.Core.RPC.RpcServer",
+            "type": "Catalyst.Node.Core.RPC.NodeRpcServer",
             "services": [
                 {
-                    "type": "Catalyst.Node.Common.Interfaces.Rpc.IRpcServer, Catalyst.Node.Common"
+                    "type": "Catalyst.Node.Common.Interfaces.Rpc.INodeRpcServer, Catalyst.Node.Common"
                 }
             ]
         },
@@ -58,10 +58,10 @@
             ]
         },
         {
-            "type": "SharpRepository.InMemoryRepository.InMemoryRepository`1[[Catalyst.Node.Common.Peer, Catalyst.Node.Common]], SharpRepository.InMemoryRepository",
+            "type": "SharpRepository.InMemoryRepository.InMemoryRepository`1[[Catalyst.Node.Common.P2P.Peer, Catalyst.Node.Common]], SharpRepository.InMemoryRepository",
             "services": [
                 {
-                    "type": "SharpRepository.Repository.IRepository`1[[Catalyst.Node.Common.Peer, Catalyst.Node.Common]], SharpRepository.Repository"
+                    "type": "SharpRepository.Repository.IRepository`1[[Catalyst.Node.Common.P2P.Peer, Catalyst.Node.Common]], SharpRepository.Repository"
                 }
             ]
         },
@@ -82,7 +82,7 @@
             ]
         },
         {
-            "type": "Catalyst.Node.Common.Peer, Catalyst.Node.Common",
+            "type": "Catalyst.Node.Common.P2P.Peer, Catalyst.Node.Common",
             "services": [
                 {
                     "type": "Catalyst.Node.Common.Interfaces.P2P.IPeer, Catalyst.Node.Common"
